fixed certification spacing on mobile

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1141,7 +1141,7 @@
             font-size: 20px;
         }
     }
-    .workexperience {
+    .certifications {
         padding: 10px;
     }
     .education {
